--- a/app/views/plays/show.html.erb
+++ b/app/views/plays/show.html.erb
@@ -3,7 +3,9 @@
 
 <p>
   <%= @play.image_name %>
-  <%= image_tag(@play) %>
+  <%= image_tag(result.sample)) %>
 </p>
+
+
 
 <%= link_to 'Set a different background', root_path  %>
